--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     },
     "dependencies": {
         "apify": "3.4.2",
-        "showdown": "2.1.0",
-        "openai": "6.10.0"
+        "express": "5.1.0",
+        "openai": "6.10.0",
+        "showdown": "2.1.0"
     },
     "scripts": {
         "start": "node ./src/main.js"
